# moira

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  USER_GUIDE.md  run-cockpit.sh  run-desktop.sh
cockpit/: index.html  package-lock.json  package.json  shoot-chain.mjs  shoot-diff.mjs  shoot-editor.mjs  shoot-features.mjs  shoot-inbox.mjs  shoot-mobile.mjs  shoot-overview.mjs  shoot-tgraph.mjs  shoot-trace.mjs  shoot-tree.mjs  shoot-wizard.mjs  vite.config.ts
cockpit/src/: App.tsx  (+3 more)
orchestrator/: PERSISTENCE.md  README.md  VERIFICATION.md  demo.sh  docker-compose.yml  import_agents.py  mobile.html  moira-sidecar.spec  moira_api.py  moira_cli.py  pyproject.toml  seed_definitions.py  verify_real_backend.py  verify_real_crosschecked.py  verify_real_pipeline.py
orchestrator/moira_core/: __init__.py  engine.py  evals.py  gates.py  git_sink.py  gitdiff.py  integrity.py  models.py  persistence.py  pg_store.py  pipelines.py  repo_reader.py  report.py  store.py  tasks.py  yamlio.py
orchestrator/moira_core/backends/: __init__.py  base.py  claude_code.py  contract.py  litellm_backend.py  mock.py
orchestrator/tests/: test_backend.py  test_client_gate.py  test_dag.py  test_definitions.py  test_discovery.py  test_engine.py  test_evals.py  test_git_sink.py  test_gitdiff.py  test_import.py  test_integrity.py  test_litellm.py  test_persistence.py  test_pg_store.py  test_repo_reader.py  test_report.py  test_tasks.py  test_yamlio.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+31 files in other folders)
