[package]
name = "moira"
version = "0.1.0"
description = "Moira — AI-native SDLC cockpit"
edition = "2021"
rust-version = "1.77"
license = "Apache-2.0"
repository = "https://github.com/hycomsa/moira"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
